--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Medicomix - Reimagining healthcare with AI-powered diagnostics, personalized wellness solutions, and seamless doctor-patient connections." />
+  <meta name="theme-color" content="#0284c7" />
   <title>Medicomix | Future of Healthcare</title>
+  
+  <!-- Font Preload for better LCP -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Outfit:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
   <script type="importmap">
 {
